# OxidePlot

./: .gitignore  Cargo.toml  LICENSE  README.md  ROADMAP.md  index.html  package-lock.json  package.json
crates/oxideplot-core/: Cargo.toml
crates/oxideplot-core/src/: geom.rs  lib.rs
crates/oxideplot-core/src/data/: datetime.rs  loader.rs  mod.rs  parser.rs  table.rs  unit_inference.rs
crates/oxideplot-core/src/processing/: downsampling.rs  expr.rs  histogram.rs  interpolation.rs  math_ops.rs  mod.rs  qc.rs  spectral.rs  statistics.rs
crates/oxideplot-core/src/render/: axis.rs  gpu_plot.rs  mod.rs  renderer.rs
crates/oxideplot-core/src/state/: data_series.rs  graph_state.rs  mod.rs  orbital_camera.rs  plot_view.rs
crates/oxideplot-egui-legacy/: Cargo.toml
crates/oxideplot-egui-legacy/src/: app.rs  main.rs
crates/oxideplot-egui-legacy/src/data/: datetime.rs  parser.rs
crates/oxideplot-egui-legacy/src/plot3d/: camera.rs
crates/oxideplot-egui-legacy/src/processing/: downsampling.rs  math_ops.rs
crates/oxideplot-egui-legacy/src/render/: gpu_plot.rs  gpu_types.rs  mod.rs  plot_interaction.rs
crates/oxideplot-egui-legacy/src/state/: app_state.rs  data_series.rs  mod.rs  theme.rs
crates/oxideplot-egui-legacy/src/ui/: data_selection_dialog.rs  graph_panel.rs  mod.rs  settings_dialog.rs
crates/oxideplot-mcp/: Cargo.toml  README.md
crates/oxideplot-mcp/src/: main.rs
crates/oxideplot-wasm/: Cargo.toml
crates/oxideplot-wasm/src/: lib.rs
docs/superpowers/plans/: 2026-06-17-oxideplot-tauri-migration-mvp.md  2026-06-18-interpolation-resample.md  2026-06-18-math-transforms.md  2026-06-18-mcp-m1-offscreen-render.md  2026-06-18-multi-graph.md  2026-06-18-table-view.md  2026-07-07-distribution-tab-slice.md  2026-07-07-foundation-analysis-core.md  2026-07-07-render-options-slice.md  2026-07-07-spectral-tabs-slice.md
docs/superpowers/specs/: 2026-06-17-oxideplot-tauri-migration-design.md  2026-06-18-interpolation-resample-design.md  2026-06-18-math-transforms-design.md  2026-06-18-mcp-m1-offscreen-render-design.md  2026-06-18-mcp-m2-server-design.md  2026-06-18-multi-graph-design.md  2026-06-18-oxideplot-feature-roadmap.md  2026-06-18-table-view-design.md  2026-07-07-desktop-analysis-rollforward-design.md
sample_data/: demo.csv
src/: App.svelte  app.css  app.rs
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/icons/: icon.icns
src-tauri/src/: commands.rs  lib.rs  main.rs
src/data/: loader.rs  mod.rs  unit_inference.rs
src/lib/: api.ts  renderer.ts
src/lib/components/: ColumnDialog.svelte  DistView.svelte  Graph.svelte  ScatterView.svelte  SeriesList.svelte  Settings.svelte  SpectrogramView.svelte  SpectrumView.svelte  TableView.svelte
src/lib/overlay/: Axes.svelte  Cursors.svelte
src/lib/spike/: webgpu_triangle.ts
src/plot3d/: renderer.rs
src/processing/: kd_tree.rs  mod.rs
src/render/: gpu_types.rs  plot_interaction.rs
src/state/: graph_state.rs  mod.rs
src/ui/: data_selection_dialog.rs  graph_panel.rs  main_window.rs
