[package]
name = "oxideplot-core"
version = "0.1.0"
edition = "2021"

[dependencies]
wgpu = { version = "24" }
bytemuck = { version = "1", features = ["derive"] }
glam = { version = "0.29", features = ["bytemuck"] }
chrono = { version = "0.4", default-features = false, features = ["clock", "std"] }
csv = "1.3"
calamine = "0.28"
serde = { version = "1", features = ["derive"] }

[dev-dependencies]
# none yet
