[package]
name = "oxideplot-core"
version = "0.1.1"
edition = "2021"
license = "MIT"

[dependencies]
wgpu = { version = "24" }
bytemuck = { version = "1", features = ["derive"] }
glam = { version = "0.29", features = ["bytemuck"] }
serde = { version = "1", features = ["derive"] }
chrono = { version = "0.4", default-features = false, features = ["clock", "std"] }
csv = "1.3"
calamine = "0.28"
kiddo = "4"
rustfft = "6"

[dev-dependencies]
pollster = "0.4"
image = { version = "0.25", default-features = false, features = ["png"] }
