[package]
name = "oxideplot-egui-legacy"
version = "0.1.0"
edition = "2021"

[dependencies]
oxideplot-core = { path = "../oxideplot-core" }
eframe = { version = "0.31", features = ["wgpu"] }
egui = "0.31"
egui_extras = { version = "0.31", features = ["datepicker"] }
egui_plot = "0.31"
calamine = "0.28"
csv = "1.3"
kiddo = "4"
glam = { version = "0.29", features = ["bytemuck"] }
bytemuck = { version = "1", features = ["derive"] }
chrono = { version = "0.4", features = ["serde"] }
rfd = "0.15"
image = "0.25"
arboard = { version = "3", features = ["image-data"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tracing = "0.1"
tracing-subscriber = "0.3"
