[package]
name = "oxideplot-mcp"
version = "0.1.1"
edition = "2021"
license = "MIT"
description = "MCP server exposing OxidePlot to Claude: load data, describe/query it, and render plots to images."

[[bin]]
name = "oxideplot-mcp"
path = "src/main.rs"

[dependencies]
rmcp = { version = "0.16", features = ["server", "transport-io", "macros"] }
tokio = { version = "1", features = ["rt-multi-thread", "macros", "io-std"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
anyhow = "1"
image = { version = "0.25", default-features = false, features = ["png"] }
base64 = "0.22"
pollster = "0.4"
oxideplot-core = { path = "../oxideplot-core" }
