[package]
name = "oxideplot-wasm"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
wasm-bindgen = "0.2"
console_error_panic_hook = "0.1"

# wasm32-only dependencies — wgpu webgpu surface only exists on wasm
[target.'cfg(target_arch = "wasm32")'.dependencies]
wgpu = { version = "24", features = ["webgpu"] }
wasm-bindgen-futures = "0.4"
web-sys = { version = "0.3", features = ["HtmlCanvasElement", "Window", "Document"] }
